<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TCC</string>
    <string name="action_settings">Settings</string>

    <!-- Filter Activity -->
    <string name="live_mode">Live Mode</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Picture</string>
    <string name="simulation_filter">Simulation Filter</string>
    <string name="visocor_filter">Accessibility Filter</string>
    <string name="color_highlight_filter">Color Highlight Filter</string>

    <string-array name="filter_options">
        <item>Deuteranopia</item>
        <item>Protanopia</item>
    </string-array>

    <!-- Bitmap Filter Activity -->
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="filtered_image">Filtered Image</string>
    <string name="try_again">Could not create image file. Try again.</string>
    <string name="file_saved">Image file saved.</string>
    <string name="pick_color">Pick a color</string>
    <string name="filter_type">Simulation Type</string>
    <string name="visocor_help">Move the slider to change the accessibility filter\'s intensity. The ends represent a greater intensity while the middle maintains the original image color.</string>

    <!-- Main Activity -->
    <string name="accessibility">Accessibility</string>
    <string name="simulation">Simulation</string>
    <string name="color_highlight">Color Highlight</string>
    <string name="settings">Settings</string>
    <string name="color_blindness_accessibility_toolkit">CAT</string>

    <!-- Color Picker Activity -->
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="invalid_value">One or more of the values is invalid. Values should be between 0 and 255.</string>
    <string name="selected_color_sample">Selected Color Sample</string>
    <string name="color_picker">Color Picker</string>
    <string name="image">Image</string>
    <string name="help">Help</string>
    <string name="image_color_picker_help">To select a color, touch a image point and hold until the color shows up in the sample color box.</string>

    <!-- Settings -->
    <string name="default_visocor_intensity">Default accessibility intensity</string>
    <string name="default_simulation_filter">Default simulation type</string>
    <string name="default_tolerance_values">Default tolerance values (0 to 255)</string>
    <string name="default_color">Default color: </string>
    <string name="saved">Settings saved.</string>
    <string name="OK">OK</string>
    <string name="error">Error</string>
    <string name="simple_simulation_faster">Simple Simulation (Faster)</string>

</resources>