<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp" >

    <Spinner
        android:id="@+id/filter_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:entries="@array/filter_options"
        android:visibility="gone" />

    <Button
        android:id="@+id/cameraModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/from_camera" />

    <Button
        android:id="@+id/galleryModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cameraModeButton"
        android:layout_centerHorizontal="true"
        android:text="@string/from_gallery" />

    <Button
        android:id="@+id/liveModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/galleryModeButton"
        android:layout_centerHorizontal="true"
        android:text="@string/live_mode" />

</RelativeLayout>