<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FilterActivity" >

    <Button
        android:id="@+id/simulation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visocor_button"
        android:layout_centerHorizontal="true"
        android:text="@string/simulation" />

    <Button
        android:id="@+id/highlight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/simulation_button"
        android:layout_centerHorizontal="true"
        android:text="@string/color_highlight" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highlight_button"
        android:layout_centerHorizontal="true"
        android:text="@string/settings" />

    <Button
        android:id="@+id/visocor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/visocor" />

</RelativeLayout>